# QuickQanava

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  VisualConnector.qml  qanGraph.cpp  qanGraph.h  qanNodeItem.cpp  qanNodeItem.h  qanPortItem.cpp  qanPortItem.h
